--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <main>
         <div class="banner-container">
             <div class="banner-text">
-                <h1>Better design for your digital products</h1>
-                <p>We are a creative studio specializing in UI/Ux design, development and strategy. </p>
+                <h1 class="title">Better design for <br>
+                    your digital products</h1>
+                <p class="description">We are a creative studio specializing in UI/Ux design, development and strategy. </p>
         <button class="btn">Explore More</button>
     </div>
     <div class="banner-img">
