--- a/index.html
+++ b/index.html
@@ -26,18 +26,56 @@
         </nav>
     </header>
     <main>
-        <div class="banner-container">
-            <div class="banner-text">
-                <h1 class="title">Better design for <br>
-                    your digital products</h1>
-                <p class="description">We are a creative studio specializing in UI/Ux design, development and strategy. </p>
-        <button class="btn">Explore More</button>
-    </div>
-    <div class="banner-img">
-        <img class="banner-i" src="./images/banner.png" alt="">
-    </div>
-</div>
-        
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="title">Better design for <br>
+                        your digital products</h1>
+                    <p class="description">We are a creative studio specializing in UI/Ux design, development and
+                        strategy. </p>
+                    <button class="btn">Explore More</button>
+                </div>
+                <div class="banner-img">
+                    <img class="banner-i" src="./images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1 class="about-text title">About Us</h1>
+            <div class="about-container"> 
+              <div>  <h2 class="about-h2"> We grow brands through <br>bold & strategic creative</h2>
+                <p class="about-p">Lorem ipsum, dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <button class="btn">Contact with us</button> 
+                </div>
+
+
+                    <div class="about-img">
+                        <img class="about-i" src="./images/section.png" alt="">
+                    </div>
+            </div>
+        </section>
+        <section>
+            <h1 class="title Services-h1"> Our Services</h1>
+            <div class="boxes">
+                <div class="box1 box">
+                    <img class="lg1" src="./icon/0.png" alt="">
+                    <h2 class="box-h"> Digital Art</h2>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
+                    <button class="btn2">Details</button>
+                </div> <div class="box2 box">
+                    <img class="lg1" src="./icon/1.png" alt="">
+                    <h2 class="box-h"> Digital Art</h2>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
+                    <button class="btn2">Details</button>
+                </div> <div class="box3 box">
+                    <img class="lg1" src="./icon/2.png" alt="">
+                    <h2 class="box-h"> Digital Art</h2>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
+                    <button class="btn2">Details</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
