--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
         </section>
         <section>
             <h1 class="about-text title">About Us</h1>
-            <div class="about-container"> 
-              <div>  <h2 class="about-h2"> We grow brands through <br>bold & strategic creative</h2>
-                <p class="about-p">Lorem ipsum, dolor sit amet consectetur adipisicing.<br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                    <button class="btn">Contact with us</button> 
+            <div class="about-container">
+                <div>
+                    <h2 class="about-h2"> We grow brands through <br>bold & strategic creative</h2>
+                    <p class="about-p">Lorem ipsum, dolor sit amet consectetur adipisicing.<br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <button class="btn">Contact with us</button>
                 </div>
 
 
-                    <div class="about-img">
-                        <img class="about-i" src="./images/section.png" alt="">
-                    </div>
+                <div class="about-img">
+                    <img class="about-i" src="./images/section.png" alt="">
+                </div>
             </div>
         </section>
         <section>
@@ -61,23 +62,61 @@
                 <div class="box1 box">
                     <img class="lg1" src="./icon/0.png" alt="">
                     <h2 class="box-h"> Digital Art</h2>
-                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
-                    <button class="btn2">Details</button>
-                </div> <div class="box2 box">
-                    <img class="lg1" src="./icon/1.png" alt="">
-                    <h2 class="box-h"> Digital Art</h2>
-                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
-                    <button class="btn2">Details</button>
-                </div> <div class="box3 box">
-                    <img class="lg1" src="./icon/2.png" alt="">
-                    <h2 class="box-h"> Digital Art</h2>
-                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam alias repellendus.</p>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam
+                        alias repellendus.</p>
                     <button class="btn2">Details</button>
                 </div>
+                <div class="box2 box">
+                    <img class="lg1" src="./icon/1.png" alt="">
+                    <h2 class="box-h"> Digital Art</h2>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam
+                        alias repellendus.</p>
+                    <button class="btn2">Details</button>
+                </div>
+                <div class="box3 box">
+                    <img class="lg1" src="./icon/2.png" alt="">
+                    <h2 class="box-h"> Digital Art</h2>
+                    <p class="box-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam vel excepturi ullam
+                        alias repellendus.</p>
+                    <button class="btn2">Details</button>
+                </div>
+
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-sec">
+            <div class="s1">
+                <img class="logo6" src="logo/logo-light.png" alt="">
+                <!-- <p class="f-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laboriosam tempora et doloremque.
+                    .</p> -->
+
+            </div>
+            <div class="s2">
+                <h3>Useful Links </h3>
+                <p>About us</p>
+                <p>careers</p>
+                <p>News & Article</p>
+                <p>legal Notice</p>
+            </div>
+            <div class="s3">
+                <h3>Supports </h3>
+                <p>Help Center</p>
+                <p>Contact Us</p>
+                <p>FAQ</p>
+                <p>Parent community</p>
+            </div>
+            <div class="s4">
+                <p>Feel free to contact & reach us!!</p>
+                <address>3557 Derek Drive, Orlando, florida
+                    +1(456)657-887
+                </address>
+                <p>info@geek.com</p>
+            </div>
+        </div>
+        Copyright&copy;2023 Geek.All right reserved
+
+    </footer>
 </body>
 
 </html>
